@@ -1,6 +1,17 @@
 2020-02-17  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/92546 (partial)
+	* include/bits/random.h (uniform_random_bit_generator): Move definition
+	to <bits/uniform_int_dist.h>.
+	* include/bits/ranges_algo.h: Include <bits/uniform_int_dist.h> instead
+	of <bits/random.h>.
+	* include/bits/ranges_algobase.h: Do not include <cmath>.
+	* include/bits/uniform_int_dist.h (uniform_random_bit_generator):
+	Move here.
+	* include/std/ranges: Do not include <limits>.
+	* testsuite/26_numerics/random/pr60037-neg.cc: Adjust dg-error lineno.
+
+	PR libstdc++/92546 (partial)
 	* include/Makefile.am: Add new header.
 	* include/Makefile.in: Regenerate.
 	* include/bits/int_limits.h: New header.
